# GeneticAlgorithmsLibrary

./: CMakeLists.txt  README.md  additional_functions.cpp  additional_functions.h  build_mpi.sh  build_thread.sh  find_minimum.cpp  find_minimum.h  function_to_calc.cpp  function_to_calc.h  genetic.cpp  genetic.h  genetic_arr.cpp  genetic_mpi.cpp  get_child.cpp  get_methods.cpp  get_mutation.cpp  get_parent.cpp  main.cpp  main_arr.cpp  main_mpi.cpp  maincpp  matplotlibcpp.h  mpi.sh  try_lib.cpp  vizualization.cpp  vizualization.h
gal/: description.txt
gal/include/: find_minimum.h
